# Delta-Viewer

./: .gitignore  AGENTS.md  CHANGELOG.md  README.md  index.html  package.json  pnpm-lock.yaml  prd.md  vite.config.ts
.github/workflows/: ci.yml  linux-package.yml  release.yml  wiki.yml
data/: README.md
docs/wiki/: Accounts-and-Annotations.md  Data-Export.md  Data-Safety-and-Privacy.md  Data-Validation.md  Home.md  Installation.md  Paragon-extFS-macOS.md  Playback-and-Clipping.md  Quick-Start.md  Release-Operations.md  Troubleshooting.md  _Sidebar.md
packaging/flatpak/: com.dohc.viewer.json  com.dohc.viewer.metainfo.xml
public/demo/: fixture.json
scripts/: assemble-release.mjs  build-ffmpeg-linux.sh  build-ffmpeg-macos.sh  build-flatpak.sh  check-linux-package.mjs  check-wiki.mjs  concurrency-state-smoke.mjs  demo-flow.test.mjs  dialog-recovery.test.mjs  exfat-smoke-macos.mjs  frame-cache.test.mjs  issue-locate.test.mjs  make-dmg.sh  operation-scope.test.mjs  playback-rendering.test.mjs  release-check.mjs  release-scripts.test.mjs  seal-macos-app-adhoc.sh  session-activation.test.mjs  stage-ffmpeg.ps1  stage-ffmpeg.sh  verify-release-deb.sh  verify-release-linux.sh  verify-release-macos.sh  verify-release-windows.ps1  verify-release.mjs  windows-cross-check.mjs
scripts/fixtures/: frame-panel-race.html
src/: App.tsx  styles.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json  tauri.linux.conf.json  tauri.macos.conf.json  tauri.windows.conf.json
src-tauri/capabilities/: default.json
src-tauri/examples/: stress-check.rs
src-tauri/icons/: icon.icns
src-tauri/src/: annotations.rs  error.rs  identity.rs  importer.rs  lib.rs  main.rs  model.rs  operation_history.rs  source.rs  storage.rs  stress.rs  validation.rs  validation_cache.rs
src-tauri/src/export/: hdf5.rs  lerobot.rs  mcap.rs  mod.rs
src-tauri/windows/: installer-hooks.nsh
src/components/: AnnotationPanel.tsx  AuthScreen.tsx  ChecksPanel.tsx  ExportPanel.tsx  FramePanel.tsx  ProgressStrip.tsx  TelemetryChart.tsx  TrimControls.tsx
src/lib/: backend.ts  demoFixture.ts  format.ts  frame-cache.ts  issue-locate.ts  operationScope.ts
src/test/: FramePanelRaceHarness.tsx
