[package]
name = "dohc-viewer"
version = "0.1.0"
description = "Inspect and export DOHC recordings from removable media"
authors = ["DOHC"]
edition = "2021"

[lib]
name = "dohc_viewer_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
base64 = "0.22"
blake3 = "1"
arrow-array = "59"
hdf5-pure = "0.21"
image = { version = "0.25", default-features = false, features = ["jpeg"] }
mcap = { version = "0.25", default-features = false }
parquet = { version = "59", default-features = false, features = ["arrow", "snap"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
thiserror = "2"
walkdir = "2"
