[package]
name = "dohc-viewer"
version = "0.3.0"
description = "Inspect and export DOHC recordings from removable media"
authors = ["DOHC"]
edition = "2021"

[lib]
name = "dohc_viewer_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
base64 = "0.22"
blake3 = "1"
fs2 = "0.4.3"
arrow-array = "59"
hdf5-pure = "0.21"
image = { version = "0.25", default-features = false, features = ["jpeg"] }
mcap = { version = "0.25", default-features = false }
parquet = { version = "59", default-features = false, features = ["arrow", "snap"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2.5.4"
thiserror = "2"
walkdir = "2"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61.2", features = ["Win32_Storage_FileSystem", "Win32_System_WindowsProgramming"] }
