[package]
name = "dohc-viewer"
version = "0.9.0"
description = "Inspect and export DOHC recordings from removable media"
authors = ["DOHC"]
edition = "2021"

[lib]
name = "dohc_viewer_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[features]
# Cross-host MSVC checks cannot invoke ml64.exe. This opt-in feature keeps the
# normal Windows release build on BLAKE3's default optimized implementation.
windows-cross-check = ["blake3/prefer_intrinsics"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
base64 = "0.22"
blake3 = "1"
bytes = "1"
foxglove = { version = "0.26", default-features = false }
fs2 = "0.4.3"
arrow-array = "59"
hdf5-pure = { path = "../vendor/hdf5-pure" }
image = { version = "0.25", default-features = false, features = ["jpeg"] }
mcap = { version = "0.25", default-features = false }
parquet = { version = "59", default-features = false, features = ["arrow", "snap"] }
prost = "0.14"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2.5.4"
thiserror = "2"
walkdir = "2"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61.2", features = ["Win32_Storage_FileSystem", "Win32_System_ProcessStatus", "Win32_System_Threading", "Win32_System_WindowsProgramming"] }

[target.'cfg(unix)'.dependencies]
libc = "0.2"
